--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -151,6 +151,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\EmailTemplateController.cs" />
     <Compile Include="Controllers\StateController.cs" />
     <Compile Include="Controllers\StateSettingsController.cs" />
     <Compile Include="Services\Application\ApplicationManagerWithEvent.cs" />
@@ -1558,6 +1559,7 @@
     <Content Include="Views\State\EditorTemplates\StateEditModel.cshtml" />
     <Content Include="Views\State\EditorTemplates\StateCreateModel.cshtml" />
     <Content Include="Views\StateSettings\Index.cshtml" />
+    <Content Include="Views\EmailTemplate\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
