--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -695,6 +695,7 @@
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\app\State\Edit.js" />
     <Content Include="Scripts\app\State\Grid.js" />
+    <Content Include="Scripts\app\Template\Edit.js" />
     <Content Include="Scripts\app\Template\Grid.js" />
     <Content Include="Scripts\app\User\Grid.js" />
     <Content Include="Scripts\globalize\cultures\globalize.culture.af-ZA.js" />
