--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -68,7 +68,6 @@
     <Compile Include="Enums\MethodOfTransit.cs" />
     <Compile Include="Helpers\ApplicationHelper.cs" />
     <Compile Include="Localization\DisplayNameLocalizedAttribute.cs" />
-    <Compile Include="Models\Recipient.cs" />
     <Compile Include="Localization\CultureContext.cs" />
     <Compile Include="Localization\ICultureContext.cs" />
     <Compile Include="Resources\Entities.Designer.cs">
@@ -164,6 +163,7 @@
       <LastGenOutput>Mail.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
