--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -55,9 +55,10 @@
     <Compile Include="ApplicationEvents\ApplicationEventJobHelper.cs" />
     <Compile Include="ApplicationEvents\ApplicationMailCreatorJob.cs" />
     <Compile Include="ApplicationEvents\ApplicationStateHistoryJob.cs" />
-    <Compile Include="ApplicationEvents\IMessageFactory.cs" />
-    <Compile Include="ApplicationEvents\MessageFactory.cs" />
-    <Compile Include="ApplicationEvents\MessageFactoryEx.cs" />
+    <Compile Include="ApplicationEvents\Helpers\IMessageFactory.cs" />
+    <Compile Include="ApplicationEvents\Helpers\MessageFactory.cs" />
+    <Compile Include="ApplicationEvents\Helpers\MessageFactoryEx.cs" />
+    <Compile Include="ApplicationEvents\Helpers\TemplateFacade.cs" />
     <Compile Include="Calculation\CalculationJobHelper.cs" />
     <Compile Include="Calculation\CalculationMailBuilder.cs" />
     <Compile Include="Calculation\CalculationWatcherJob.cs" />
