--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -58,7 +58,8 @@
     <Compile Include="ApplicationEvents\Helpers\IMessageFactory.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageFactory.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageFactoryEx.cs" />
-    <Compile Include="ApplicationEvents\Helpers\TemplateFacade.cs" />
+    <Compile Include="ApplicationEvents\Helpers\RecipientsHelper.cs" />
+    <Compile Include="ApplicationEvents\Helpers\TemplatesHelper.cs" />
     <Compile Include="Calculation\CalculationJobHelper.cs" />
     <Compile Include="Calculation\CalculationMailBuilder.cs" />
     <Compile Include="Calculation\CalculationWatcherJob.cs" />
