--- a/Alicargo.Jobs/Alicargo.Jobs.csproj
+++ b/Alicargo.Jobs/Alicargo.Jobs.csproj
@@ -56,19 +56,19 @@
     <Compile Include="ApplicationEvents\ApplicationMailCreatorJob.cs" />
     <Compile Include="ApplicationEvents\ApplicationStateHistoryJob.cs" />
     <Compile Include="ApplicationEvents\Helpers\FilesFasade.cs" />
-    <Compile Include="ApplicationEvents\Helpers\IFilesFasade.cs" />
-    <Compile Include="ApplicationEvents\Helpers\IMessageFactory.cs" />
-    <Compile Include="ApplicationEvents\Helpers\IRecipientsFacade.cs" />
-    <Compile Include="ApplicationEvents\Helpers\ITemplatesFacade.cs" />
-    <Compile Include="ApplicationEvents\Helpers\ITextBulder.cs" />
+    <Compile Include="ApplicationEvents\Abstract\IFilesFasade.cs" />
+    <Compile Include="ApplicationEvents\Abstract\IMessageFactory.cs" />
+    <Compile Include="ApplicationEvents\Abstract\IRecipientsFacade.cs" />
+    <Compile Include="ApplicationEvents\Abstract\ITemplatesFacade.cs" />
+    <Compile Include="ApplicationEvents\Abstract\ITextBulder.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageFactory.cs" />
     <Compile Include="ApplicationEvents\Helpers\MessageFactoryEx.cs" />
-    <Compile Include="ApplicationEvents\Helpers\Recipient.cs" />
+    <Compile Include="ApplicationEvents\Entities\Recipient.cs" />
     <Compile Include="ApplicationEvents\Helpers\RecipientsFacade.cs" />
     <Compile Include="ApplicationEvents\Helpers\TextBulderHelper.cs" />
     <Compile Include="ApplicationEvents\Helpers\TemplatesFacade.cs" />
     <Compile Include="ApplicationEvents\Helpers\TextBulder.cs" />
-    <Compile Include="ApplicationEvents\Helpers\TextLocalizedData.cs" />
+    <Compile Include="ApplicationEvents\Entities\TextLocalizedData.cs" />
     <Compile Include="Calculation\CalculationJobHelper.cs" />
     <Compile Include="Calculation\CalculationMailBuilder.cs" />
     <Compile Include="Calculation\CalculationWatcherJob.cs" />
@@ -80,8 +80,8 @@
     <Compile Include="Core\IJobRunner.cs" />
     <Compile Include="Core\JobRunnerHelper.cs" />
     <Compile Include="Core\ShardSettings.cs" />
-    <Compile Include="Entities\ApplicationFileUploadedEventData.cs" />
-    <Compile Include="Entities\ApplicationSetStateEventData.cs" />
+    <Compile Include="ApplicationEvents\Entities\ApplicationFileUploadedEventData.cs" />
+    <Compile Include="ApplicationEvents\Entities\ApplicationSetStateEventData.cs" />
     <Compile Include="MailSenderJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
