--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -88,7 +88,7 @@
 			<maximumFileSize value="1MB" />
 			<staticLogFileName value="true" />
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%d %-2p %c user:%u%n%m%n%exception%n%n" />
+				<conversionPattern value="%d %-2p %c%n%m%n%exception%n%n" />
 			</layout>
 		</appender>
 		<logger additivity="false" name="JobsLogger">
