added help page

--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -17,6 +17,9 @@
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@alicargo.ru">
 				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo.Dev\Mails" />
 			</smtp>
+			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+				<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
+			</smtp>-->
 		</mailSettings>
 	</system.net>
 	<system.web>
