--- a/Alicargo.DataAccess/Alicargo.DataAccess.csproj
+++ b/Alicargo.DataAccess/Alicargo.DataAccess.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Repositories\BrokerRepository.cs" />
     <Compile Include="Repositories\CalculationRepository.cs" />
     <Compile Include="Repositories\CarrierRepository.cs" />
+    <Compile Include="Repositories\CityRepository.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\CountryRepository.cs" />
     <Compile Include="Repositories\AwbRepository.cs" />
