--- a/Alicargo.DataAccess.BlackBox.Tests/App.config
+++ b/Alicargo.DataAccess.BlackBox.Tests/App.config
@@ -3,7 +3,10 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.FilesConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
