--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -18,26 +18,30 @@
 		<add key="DefaultFrom" value="robot@alicargo.ru" />
 	</appSettings>
 	<connectionStrings>
-		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-	</connectionStrings>
+  <add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString"
+   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+  <add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString"
+   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
+   providerName="" />
+ </connectionStrings>
 	<userSettings>
 		<Alicargo.BlackBox.Tests.Properties.Settings>
-			<setting name="BaseAddress" serializeAs="String">
-				<value>http://localhost:8080/</value>
-			</setting>
-			<setting name="AdminLogin" serializeAs="String">
-				<value>Admin</value>
-			</setting>
-			<setting name="AdminPassword" serializeAs="String">
-				<value>Admin</value>
-			</setting>
-			<setting name="ClientLogin" serializeAs="String">
-				<value>c1</value>
-			</setting>
-			<setting name="ClientPassword" serializeAs="String">
-				<value>c1</value>
-			</setting>
-		</Alicargo.BlackBox.Tests.Properties.Settings>
+   <setting name="BaseAddress" serializeAs="String">
+    <value>http://localhost:8080/</value>
+   </setting>
+   <setting name="AdminLogin" serializeAs="String">
+    <value>Admin</value>
+   </setting>
+   <setting name="AdminPassword" serializeAs="String">
+    <value>Admin</value>
+   </setting>
+   <setting name="ClientLogin" serializeAs="String">
+    <value>c1</value>
+   </setting>
+   <setting name="ClientPassword" serializeAs="String">
+    <value>c1</value>
+   </setting>
+  </Alicargo.BlackBox.Tests.Properties.Settings>
 	</userSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
